[package]
name = "sideswap_dealer_example"
version = "0.1.2"
edition = "2021"

[dependencies]
sideswap_api = { path = "../sideswap_api" }
sideswap_common = { path = "../sideswap_common" }
sideswap_dealer = { path = "../sideswap_dealer" }

anyhow.workspace = true
clap.workspace = true
config.workspace = true
log.workspace = true
log4rs.workspace = true
reqwest = { workspace = true, default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
