[package]
name = "sideswap_dealer_stdio"
version = "0.1.2"
edition = "2021"

[dependencies]
sideswap_api = { path = "../sideswap_api" }
sideswap_common = { path = "../sideswap_common" }
sideswap_dealer = { path = "../sideswap_dealer" }

clap.workspace = true
log.workspace = true
serde_json.workspace = true
anyhow.workspace = true
serde.workspace = true
config.workspace = true
log4rs.workspace = true
crossbeam-channel.workspace = true
