[package]
name = "sideswap_dealer_ws"
version = "0.1.2"
edition = "2018"

[dependencies]
sideswap_api = { version = "*", path = "../sideswap_api" }
sideswap_common = { version = "*", path = "../sideswap_common" }
sideswap_dealer = { version = "*", path = "../sideswap_dealer" }
clap = { version = "*" }
log = "*"
serde_json = "1.0"
anyhow = "*"
serde = { version = "1.0", features = ["derive"] }
config = "0.11.0"
log4rs = "*"
tokio-tungstenite = { version = "0.17.2", features = [ "stream" ] }
futures = "*"
tokio = { version = "1.15.0", default-features = false, features = ["macros", "net", "rt", "sync", "time"] }
futures-channel = "*"
futures-util = "*"
tungstenite = { version = "0.17.2", default-features = false, features = [] }
crossbeam-channel = "0.5.1"
