[package]
name = "sideswap_dealer_ws"
version = "0.1.2"
edition = "2021"

[dependencies]
sideswap_api = { path = "../sideswap_api" }
sideswap_common = { path = "../sideswap_common" }
sideswap_dealer = { path = "../sideswap_dealer" }

clap.workspace = true
log.workspace = true
serde_json.workspace = true
anyhow.workspace = true
serde.workspace = true
config.workspace = true
log4rs.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
tokio.workspace = true
futures-channel.workspace = true
futures-util.workspace = true
tungstenite.workspace = true
crossbeam-channel.workspace = true
