[package]
name = "sideswap_headless"
version = "0.1.2"
edition = "2018"

[dependencies]
sideswap_common = { version = "*", path = "../sideswap_common" }
sideswap_client = { version = "*", path = "../sideswap_client" }
clap = "*"
tokio-tungstenite = { version = "*", features = [ "stream" ] }
tokio = { version = "1.15.0", default-features = false, features = ["macros", "net", "rt", "sync", "time", "rt-multi-thread"] }
tungstenite = { version = "0.13.0", default-features = false, features = [] }
log = "*"
futures-util = "*"
serde_json = "1.0"
prost = "0.6.1"
