[package]
name = "sideswap_headless"
version = "0.1.2"
edition = "2021"

[dependencies]
sideswap_client = { path = "../sideswap_client" }
sideswap_common = { path = "../sideswap_common" }

clap.workspace = true
futures-util.workspace = true
log.workspace = true
prost.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt", "sync", "time", "rt-multi-thread"] }
tokio-tungstenite = { workspace = true, features = [ "stream" ] }
tungstenite = { workspace = true, default-features = false, features = [] }
