[package]
name = "sideswap_headless"
version = "0.1.2"
edition = "2021"

[dependencies]
sideswap_client = { path = "../sideswap_client" }
sideswap_common = { path = "../sideswap_common" }

clap.workspace = true
futures.workspace = true
log.workspace = true
prost.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tungstenite.workspace = true
