[package]
name = "sideswap_headless_server"
version = "0.1.2"
edition = "2021"

[dependencies]
sideswap_api = { path = "../sideswap_api" }
sideswap_client = { path = "../sideswap_client" }
sideswap_common = { path = "../sideswap_common" }

config.workspace = true
log.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tokio.workspace = true
thiserror.workspace = true
crossbeam-channel.workspace = true
elements.workspace = true
base64.workspace = true
rand.workspace = true
anyhow.workspace = true
rusqlite.workspace = true
