[package]
name = "sideswap_headless_trader"
version = "0.1.2"
edition = "2018"

[dependencies]
sideswap_api = { version = "*", path = "../sideswap_api" }
sideswap_common = { version = "*", path = "../sideswap_common" }
sideswap_client = { version = "*", path = "../sideswap_client" }
serde = { version = "1.0", features = ["derive"] }
clap = "3.2.0"
config = "0.11.0"
log = "*"
prost = "0.10.4"
