[package]
name = "sideswap_headless_trader"
version = "0.1.2"
edition = "2021"

[dependencies]
sideswap_api = { path = "../sideswap_api" }
sideswap_client = { path = "../sideswap_client" }
sideswap_common = { path = "../sideswap_common" }

config.workspace = true
log.workspace = true
prost.workspace = true
serde.workspace = true
