[package]
name = "sideswap_jade"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow.workspace = true
base64.workspace = true
ciborium-io.workspace = true
ciborium.workspace = true
crossbeam-channel.workspace = true
elements.workspace = true
hex.workspace = true
log.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_json.workspace = true
ureq.workspace = true

[target.'cfg(any(target_os = "windows", target_os = "linux", target_os = "macos"))'.dependencies]
serialport.workspace = true
