[package]
name = "sideswap_jade"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow.workspace = true
base64.workspace = true
btleplug.workspace = true
ciborium-io.workspace = true
ciborium.workspace = true
crossbeam-channel.workspace = true
elements.workspace = true
futures.workspace = true
hex.workspace = true
log.workspace = true
semver.workspace = true
serde_bytes.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true
ureq.workspace = true
uuid.workspace = true

[target.'cfg(any(target_os = "windows", target_os = "linux", target_os = "macos"))'.dependencies]
serialport.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.19.0"
jni-utils = "0.1.1"
