[package]
name = "sideswap_jade"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow.workspace = true
base64.workspace = true
ciborium-io.workspace = true
ciborium.workspace = true
crossbeam-channel.workspace = true
elements.workspace = true
futures.workspace = true
hex.workspace = true
log.workspace = true
semver.workspace = true
serde_bytes.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
ureq.workspace = true
uuid.workspace = true
uniffi.workspace = true

[target.'cfg(any(target_os = "windows", target_os = "linux", target_os = "macos"))'.dependencies]
serialport.workspace = true

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["uniffi/cli"]
