[package]
name = "sideswap_libwally"
version = "0.1.0"
edition = "2018"

[dependencies]
bitcoin = { version = "0.26", features = [ "use-serde" ] }
rand = "0.6.5"
gdk-rust = { path = "../gdk_rust" }
gdk-electrum = { path = "../gdk_rust/gdk_electrum" }
gdk-common = { path = "../gdk_rust/gdk_common" }
libc = "0.2"
hex = "0.4.0"
log = "*"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
elements = { version = "0.16", features = ["serde-feature"] }
anyhow = "*"
