[package]
name = "sideswap_lwk"
version = "0.1.2"
edition = "2021"

[dependencies]
sideswap_api = { path = "../sideswap_api" }
sideswap_common = { path = "../sideswap_common" }
sideswap_dealer = { path = "../sideswap_dealer" }

anyhow.workspace = true
base64.workspace = true
bip39.workspace = true
config.workspace = true
elements.workspace = true
hex.workspace = true
log.workspace = true
lwk_common.workspace = true
lwk_signer.workspace = true
lwk_wollet.workspace = true
serde.workspace = true
tokio.workspace = true
