[package]
name = "sideswap_manager"
version = "0.1.2"
edition = "2021"

[dependencies]
sideswap_api = { path = "../sideswap_api" }
sideswap_common = { path = "../sideswap_common" }
sideswap_dealer = { path = "../sideswap_dealer" }
sideswap_lwk = { path = "../sideswap_lwk" }
sideswap_types = { path = "../sideswap_types" }

anyhow.workspace = true
bip39.workspace = true
config.workspace = true
elements.workspace = true
futures.workspace = true
log.workspace = true
log4rs.workspace = true
serde_json.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio-tungstenite.workspace = true
tokio.workspace = true
ureq.workspace = true
