[package]
name = "sideswap_payjoin"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.21"
elements = { version = "0.24", features = ["serde"] }
once_cell = "1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
ureq = { version = "2.7", features = ["json"] }
